# selfe-sys

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  README.md  Readme.md  Readme.org  Xargo.toml  alloc.rs  arm.rs  arm.s  build.rs  build.sh  buildspec.yml  default_config.toml  fmt.sh  lib.rs  test.sh  x86.rs  x86.s  x86_64.rs  x86_64.s
codegen/: bitfields.toml
confignoble/: Cargo.toml  README.md
confignoble/src/: CMakeLists_kernel.txt  build_helpers.rs  compilation.rs  default_config.toml  lib.rs  main.rs  model.rs
confignoble/src/model/: deserialization.rs  mod.rs
confignoble/tests/: integration.rs
cotransport/: Cargo.toml  README.md
cotransport/src/: main.rs  simulate.rs
example/: Cargo.toml  README.md  sel4.toml
example/.cargo/: config
example/src/: main.rs
example_application/: .gitignore  Cargo.toml  README.md  build.rs  data_file.txt  rust-toolchain  sel4.toml
example_application/build-script/: Cargo.toml
example_application/build-script/src/: main.rs
example_application/sel4-start/: Cargo.toml
example_application/sel4-start/src/: arm64.rs  lib.rs  x86.rs  x86_64.rs
example_application/sel4_start/: Cargo.toml
example_application/sel4_start/src/: lib.rs
example_application/selfe-start/: Cargo.toml  README.md  build.rs
example_application/selfe-start/src/: lib.rs
example_application/src/: main.rs
libsel4-sys-gen/: CMakeLists.txt  Cargo.toml  README.md  build.rs
libsel4-sys-gen/.cargo/: config
libsel4-sys-gen/codegen/: bitfields.toml
libsel4-sys-gen/src/: bindgen_wrapper.h  lib.rs
sel4-start/: Cargo.toml  README.md  alloc.rs  arm.rs  build.rs  lib.rs  x86_64.rs
sel4-start/src/: arm.rs  lib.rs
selfe-arc/: Cargo.toml  README.md  test.sh
selfe-arc/src/: build.rs  layout.rs  lib.rs  pack.rs  read.rs
selfe-config/: Cargo.toml  README.md
selfe-config/src/: CMakeLists_kernel.txt  build_helpers.rs  compilation.rs  default_config.toml  main.rs
selfe-config/src/model/: deserialization.rs  mod.rs  serialization.rs
selfe-config/tests/: integration.rs
selfe-runtime/: Cargo.toml
selfe-runtime/src/: debug.rs  lib.rs  libc.rs  panic.rs
src/: compile_time_assertions.rs  lib.rs  nano_libc.c
tests/: integration.rs
