[package]
name = "selfe-sys"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>", "Zachary Pierce <zack@auxon.io>"]
edition = "2018"

[lib]
name = "selfe_sys"

[dependencies]
static_assertions = "0.3.1"

[build-dependencies]
bindgen = { version = "0.49", default-features = false }
selfe-config = { path = "./selfe-config" }
quote = "0.6"
toml = "0.5"
proc-macro2 = "0.4"
itertools = "0.8.0"

[dev-dependencies]
proptest = "0.9.2"
