[package]
name = "selfe-sys"
version = "0.1.1"
authors = [
    "Russell Mull <russell@auxon.io>",
    "Zachary Pierce <zack@auxon.io>",
    "Jon Lamb <jon@auxon.io>"]
edition = "2018"
readme = "README.md"
description = "A generated thin wrapper around libsel4.a, with supporting subcrates"
repository = "https://github.com/auxoncorp/selfe-sys"
license-file = "LICENSE"
resolver = "2"

[lib]
name = "selfe_sys"

[dependencies]

[build-dependencies]
bindgen = { version = "0.52", default-features = false }
selfe-config = "0.2"
quote = "0.6"
toml = "0.5"
proc-macro2 = "0.4"
itertools = "0.8.0"
cc = "1.0"

[dev-dependencies]
proptest = "0.9.2"

[features]
default = ["nano_libc"]
nano_libc = []

