[package]
name = "example"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>", "Zachary Pierce <zack@auxon.io>"]
edition = "2018"
resolver = "2"

[dependencies]
sel4-start = { path = "sel4-start", features = ["panic_handler"] }
selfe-sys = { path = ".." }
selfe-arc = { path = "../selfe-arc", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
selfe-arc = { path = "../selfe-arc" }
