[package]
name = "example"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>", "Zachary Pierce <zack@auxon.io>"]
edition = "2018"
resolver = "2"

[dependencies]
selfe-start = { path = "selfe-start", features = ["panic_handler"] }
selfe-sys = "0.1"
selfe-arc = { version = "0.1", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
selfe-arc = "0.1"
