[package]
name = "libsel4-sys-gen"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"

[lib]
name = "sel4_sys"

[dependencies]
static_assertions = "0.3.1"

[build-dependencies]
bindgen = { version = "0.49", default-features = false }
confignoble = { path = "../confignoble" }