[package]
name = "selfe-arc"
version = "0.1.0"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"

[dependencies]
#byteorder = { version = "1", default-features = false }

# Thanks to rust-lang/cargo#5730
# we specify this as an independent vendored crate
[dependencies.byteorder]
git = "ssh://git@github.com/auxoncorp/byteorder.git"
branch = "no-std"
default-features = false

[dev-dependencies]
proptest = "0.9.3"
proptest-derive = "0.1.0"
tempfile = "3"

[features]
default = ["std"]
std = ["byteorder/std"]
