[package]
name = "selfe-arc"
version = "0.1.1"
authors = ["Russell Mull <russell@auxon.io>"]
edition = "2018"
resolver = "2"

[dependencies]
byteorder = { version = "1", default-features = false }

[dev-dependencies]
proptest = "0.9.3"
proptest-derive = "0.1.0"
tempfile = "3"

[features]
default = ["std"]
std = ["byteorder/std"]
