[package]
name = "selfe-config"
version = "0.2.1"
authors = ["Russell Mull <russell@auxon.io>", "Zachary Pierce <zack@auxon.io>"]
edition = "2018"
readme = "README.md"
description = "A seL4 configuration format, managed by a library"
repository = "https://github.com/auxoncorp/selfe-sys"
license-file = "../LICENSE"
resolver = "2"

[features]
default = []
bin = ["clap"]

[lib]
name = "selfe_config"
path = "src/lib.rs"

[[bin]]
name = "selfe"
path = "src/main.rs"
doctest = false
required-features = ["bin"]

[dependencies]
toml = "0.5"

[dependencies.clap]
version = "2.33.0"
default-features = false
optional = true

[dev-dependencies]
tempfile = "3"
